# MSHSystem

./: .gitignore  CMakeLists.txt  COMPLETION_REPORT.md  DetectionSystem.h  IMPLEMENTATION_SUMMARY.md  INDEX.md  Logger.h  MSHSystem  MSHSystem.cpp  MSHSystem.h  PRESENTATION.md  README.txt  README_FINAL.md  TEAM_SUMMARY.txt  VERIFICATION.md  alarmsystem.cpp  alarmsystem.h  build.sh  main.cpp  securitysystem.cpp  securitysystem.h  test_demo.txt  test_demo_fixed.txt
MSH-New/: .gitignore
MSH-New/src/: DetectionSystem.cpp  SecuritySystem.cpp  System.cpp
ModeSubsystem_Bashir/: CinemaMode.h.txt  EveningMode.h.txt  Mode.h  NormalMode.h  PartyMode.h  changeMode_snippet.txt
devices/: DeviceStatus.h  Light.h
modules/devices/: CMakeLists.txt  Camera.h  Device.h  DeviceManager.h  DeviceStatus.h  Light.h  MusicSystem.h  SmokeGasDetector.h  TV.h  main.cpp
security-sys/: DetectionSystem.h
security-system/: CMakeLists.txt  main.cpp
security-system/security-sys/: Logger.h  SecuritySystem.h  System.h
security-system/src/: Logger.cpp
state/: HighPerformanceState.cpp  HighPerformanceState.h  NormalState.cpp  NormalState.h  SleepState.cpp  SleepState.h  State.h
